--- a/test/test_events.html
+++ b/test/test_events.html
@@ -5,9 +5,9 @@
   <head>
     <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
     <title>Primer Test</title>
-    <script src="./excanvas.js" type="text/javascript"></script>
+    <script src="../excanvas.js" type="text/javascript"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script>
-    <script src="javascript/lib/primer.js" type="text/javascript"></script>
+    <script src="../primer.js" type="text/javascript"></script>
     <script type="text/javascript">
     var p1;
     jQuery(function() {
@@ -88,7 +88,7 @@
     </script>
   </head>
   <body>
-    <p>Testing 2000 objects with click/mouseover/mouseout properties.</p>
+    <p>Testing 2000 objects with click/mouseover/mouseout events.</p>
     <div id="p1"></div>
   </body>
 </html>
