--- a/test/test_events.html
+++ b/test/test_events.html
@@ -5,7 +5,9 @@
   <head>
     <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
     <title>Primer Test</title>
+    <!--[if IE]>
     <script src="../excanvas.js" type="text/javascript"></script>
+    <![endif]-->
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script>
     <script src="../primer.js" type="text/javascript"></script>
     <script type="text/javascript">
